[tool.poetry]
name = "samsul"
version = "0.1.0"
description = ""
authors = ["Risyal Ambiyansyah <ambiyansyah.risyal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain-community = "^0.2.11"
langchain-openai = "^0.1.21"
langchain-chroma = "^0.1.2"
boto3 = "^1.34.158"
unstructured = {extras = ["pdf"], version = "^0.15.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
